Slight text change

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -114,5 +114,5 @@ iframe {
     padding: 30px 20px;
     text-decoration: none;
     font-size: 17px;
-    font-weight:normal;
+    font-weight:300;
 }
