--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -1,7 +1,10 @@
 body {
   margin:0;
   font-family: "proxima nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  overflow-x: hidden;
 }
+
+/* ----------------------------- Home Page CSS -----------------------------  */
 
 .topnav {
   overflow: hidden;
@@ -9,7 +12,7 @@ body {
   padding: 0 2%;
 }
 
-.topnav_link {
+.topnav__link {
   float: right;
   display: block;
   color: #f2f2f2;
@@ -20,7 +23,7 @@ body {
   font-weight:normal;
 }
 
-.topnav__disableClick{
+.disableClick{
   pointer-events: none;
 }
 
@@ -105,14 +108,16 @@ iframe {
   overflow: hidden;
   background: #D8D8D8;
   height: 80px;
-  padding: 0 5%;
-  width: 100%;
+  padding: 0 2%;
+  width: 98%;
   position: absolute;
   z-index: 1000;
   font-family: "proxima nova", "Helvetica Neue", Helvetica, Arial, Sans-serif;
+  font-weight:300;
+  /* box-shadow: 0 50vh 0 50vh #000; */
 }
 
-.footer a {
+.footer__link {
     float:right;
     display: block;
     color: black;
@@ -120,5 +125,19 @@ iframe {
     padding: 30px 20px;
     text-decoration: none;
     font-size: 17px;
-    font-weight:300;
+}
+
+.center-block {
+  text-align: center;
+  display: inline-block;
+  padding-left: 5%;
+  font-weight: normal;
+}
+
+
+/* ----------------------------- About Page CSS ----------------------------- */
+.sec{
+  background: red;
+  padding: 1em 2em;
+  box-shadow: 0px 14px 3px -2px rgba(0,0,0,.75);
 }
