--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -12,6 +12,10 @@ body {
   padding: 0 2%;
 }
 
+/* .active {
+  color: #F25D50;
+} */
+
 .link {
     transition: all ease-in-out 250ms;
 }
@@ -149,8 +153,77 @@ iframe {
 
 
 /* ----------------------------- About Page CSS ----------------------------- */
-.sec{
+/* .container{
   background: red;
   padding: 1em 2em;
-  box-shadow: 0px 14px 3px -2px rgba(0,0,0,.75);
+  box-shadow: 0px 4px 3px -2px rgba(0,0,0,.75);
+} */
+
+/* .intro {
+  text-align: left;
+  padding: 0 3%;
+} */
+
+.intro__h1 {
+  font-size: 80px;
+}
+
+.intro__h2 {
+  font-size: 32px;
+  transform: scale(1, 1);
+  font-weight: lighter;
+  padding-right: 60%;
+}
+
+.intro__h3 {
+  font-weight: lighter;
+  padding-right: 60%;
+  padding-left: 2.8em;
+  transform: scale(1.1, 1);
+}
+
+.avatar-image{
+  max-width: 500px;
+  float: right;
+  padding-right: 100px;
+}
+
+.intro img{
+  width: 200%;
+  height: 200%
+}
+
+[class*="col-"]
+  { float: left;
+    padding: 0 5%;
+    box-shadow: 0px 4px 3px -2px rgba(0,0,0,.75);
+  }
+  .col-xs {width: 100%}
+  .col-xs-1 {width: 8.333%}
+  .col-xs-2 {width: 16.667%}
+  .col-xs-3 { width: 25%}
+  .col-xs-4 {width: 33.333%}
+  .col-xs-5 {width: 41.667%}
+  .col-xs-6 {width: 50%}
+  .col-xs-7 {width: 58.333%}
+  .col-xs-8 {width: 66.667%}
+  .col-xs-9 {width: 75%}
+  .col-xs-10 {width: 83.333%}
+  .col-xs-11 {width: 91.667%}
+  .col-xs-12 {width: 100%}
+
+@media only screen and (min-width: 544px) {
+  .col-md {width: 100%}
+  .col-md-1 {width: 8.333%}
+  .col-md-2 {width: 16.667%}
+  .col-md-3 {width: 25%}
+  .col-md-4 {width: 33.333%}
+  .col-md-5 {width: 41.667%}
+  .col-md-6 {width: 50%}
+  .col-md-7 {width: 58.333%}
+  .col-md-8 {width: 66.667%}
+  .col-md-9 {width: 75%}
+  .col-md-10 {width: 83.333%}
+  .col-md-11 {width: 91.667%}
+  .col-md-12 {width: 100%}
 }
