--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -153,11 +153,11 @@ iframe {
 
 
 /* ----------------------------- About Page CSS ----------------------------- */
-/* .container{
-  background: red;
-  padding: 1em 2em;
-  box-shadow: 0px 4px 3px -2px rgba(0,0,0,.75);
-} */
+.container{
+  /* padding: 1em 2em; */
+  padding: 5% 5%;
+  /* box-shadow: 0px 4px 3px -2px rgba(0,0,0,.75); */
+}
 
 /* .intro {
   text-align: left;
@@ -192,14 +192,16 @@ iframe {
 }
 
 .palette img{
-  width: 200%;
-  height: 200%;
+  width: auto;
+  height: 150px;
+  padding: 1em 2em;
+  /* box-shadow: none; */
 }
 
 [class*="col-"]
   { float: left;
-    padding: 0 5%;
-    box-shadow: 0px 4px 3px -2px rgba(0,0,0,.75);
+    /* padding: 5% 5%; */
+    box-shadow: 0px 4px 2px -2px rgba(0,0,0,.75);
   }
   .col-xs {width: 100%}
   .col-xs-1 {width: 8.333%}
