--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -155,46 +155,44 @@ iframe {
 /* ----------------------------- About Page CSS ----------------------------- */
 .container{
   /* padding: 1em 2em; */
-  padding: 5% 5%;
+  padding: 1% 10% 10% 10%;
   /* box-shadow: 0px 4px 3px -2px rgba(0,0,0,.75); */
 }
 
-/* .intro {
-  text-align: left;
-  padding: 0 3%;
-} */
+.text {
+  letter-spacing: 1px;
+}
 
 .intro__h1 {
-  font-size: 80px;
+  font-size: 6em;
   line-height: 50px;
   padding-top: 7%;
 }
 
 .intro__h2 {
   font-size: 32px;
-  transform: scale(1, 1);
-  font-weight: lighter;
+  font-weight: 200;
   padding-right: 60%;
 }
 
 .intro__h3 {
-  font-weight: lighter;
-  padding-right: 60%;
-  padding-left: 2.9em;
-  transform: scale(1.1, 1);
-  line-height: 30px
+  font-weight: 200;
+  padding-right: 55%;
+  line-height: 40px;
+  color: grey;
+  font-size: 28px;
 }
 
 .avatar-image{
-  max-width: 500px;
+  max-width: 450px;
   float: right;
-  padding-right: 100px;
+  padding-right: 120px;
 }
 
 .palette img{
   width: auto;
-  height: 150px;
-  padding: 1em 2em;
+  height: 130px;
+  padding: 20px 15px;
   /* box-shadow: none; */
 }
 
