--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -4,7 +4,19 @@ body {
   overflow-x: hidden;
 }
 
-/* ----------------------------- Home Page CSS -----------------------------  */
+/* ----------------------------- Master Defaults -----------------------------  */
+.link {
+    transition: all ease-in-out 250ms;
+}
+
+.avatar-image{
+  /* max-width: 450px; */
+  width: 40%;
+  float: right;
+  padding-right: 120px;
+  padding-left: 10%;
+  padding-bottom: 3%;
+}
 
 .topnav {
   overflow: hidden;
@@ -16,10 +28,6 @@ body {
   color: #F25D50;
 } */
 
-.link {
-    transition: all ease-in-out 250ms;
-}
-
 .topnav__link {
   float: right;
   display: block;
@@ -30,6 +38,23 @@ body {
   font-size: 17px;
   font-weight:normal;
 }
+
+.topnav__logo {
+  width: 40%;
+  height: auto;
+  padding:inherit;
+  transform: translate(70%, 20%);
+}
+
+.vertical {
+    border-left: 2px solid white;
+    height: 45px;
+    position:absolute;
+    left: 10%;
+    transform: translateY(35%);
+}
+
+/* ----------------------------- Home Page CSS -----------------------------  */
 
 .disableClick{
   pointer-events: none;
@@ -74,6 +99,10 @@ body {
   .palette {
     display: none;
   }
+
+  /* .me-img {
+    width: 100%;
+  } */
 
 }
 
@@ -187,14 +216,6 @@ iframe {
   font-size: 28px;
 }
 
-.avatar-image{
-  max-width: 450px;
-  float: right;
-  padding-right: 120px;
-  padding-left: 10%;
-  padding-bottom: 3%;
-}
-
 .pie-img {
   max-width: 450px;
   float: none;
@@ -211,6 +232,7 @@ iframe {
 
 .level-img{
   max-width: 100%;
+  /* width: 100%; */
 }
 
 
@@ -218,13 +240,17 @@ iframe {
 .palette img {
   width: auto;
   height: 130px;
-  padding: 20px 15px;
-  /* box-shadow: none; */
+  /* padding: 20px 15px; */
+}
+
+.palette div {
+  box-shadow: none;
+  padding: 1%;
+  width: 230px;
 }
 
 .list{
   list-style-type: none;
-  padding: 6em;
 }
 
 .container__sec{
