--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -135,6 +135,30 @@ body {
 
 }
 
+.envelope .email-text{
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  font-family: "proxima nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+  /* Position the emailText */
+  position: absolute;
+  z-index: 1;
+  bottom: -3px;
+  right: 20%;
+  font-size: 16px;
+  cursor: text; /*Changes the pointer to recular cursor for copying*/
+  -webkit-user-select: all; /*One click selects entire email*/
+}
+
+.envelope:hover .email-text {
+  visibility: visible;
+}
+
 div img.animated-gif{
   width: 100%;
   height: 680px;
