--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -160,7 +160,7 @@ body {
   /* Position the emailText */
   position: absolute;
   z-index: 1;
-  bottom: -3px;
+  bottom: 3px;
   right: 20%;
   font-size: 16px;
   cursor: text; /*Changes the pointer to recular cursor for copying*/
@@ -410,4 +410,61 @@ iframe {
 .list__process{
   list-style-type: none;
   /* padding-right: 130px; */
+}
+
+
+/* ----------------------------- Projects Page CSS ----------------------------- */
+
+/* images */
+.media-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.media-card-wrapper {
+  width: 250px;
+  height: 250px;
+  position: relative;
+  margin-bottom: 25px;
+  text-align: center;
+}
+
+.media-card{
+  width: 225px;
+  height: 225px;
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0 auto 25px;
+  border-radius: 8px;
+  overflow: hidden;
+  z-index: 0;
+  transition: all .3s ease-in-out;
+  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.4);
+}
+
+.media-card > img {
+  width: 100%;
+  height: 100%;
+}
+
+.media-card:hover {
+  width: 250px;
+  height: 250px;
+  z-index: 10;
+  box-shadow: 0 50px 125px rgba(0, 0, 0, 0.4);
+}
+
+/* videos */
+.media-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.media-list > iframe {
+  margin-bottom: 50px;
 }
