--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -2,6 +2,14 @@ body {
   margin:0 auto;
   font-family: "proxima nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
   overflow-x: hidden;
+
+  /* background-image:url(../videos/home/home-motherhood.gif);
+  background-position:center;
+  min-height: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover; */
 }
 
 /* ----------------------------- Master Defaults -----------------------------  */
@@ -48,9 +56,34 @@ body {
 }
 
 .envelope {
-  transform: scale(1.3,1);
+  /* transform: scale(1.3,1); */
   font-size:23px;
   position: relative;
+}
+
+.envelope .email-text{
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  font-family: "proxima nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+  /* Position the emailText */
+  position: absolute;
+  z-index: 1;
+  bottom: 3px;
+  right: 20%;
+  font-size: 16px;
+  cursor: text; /*Changes the pointer to recular cursor for copying*/
+  -webkit-user-select: all; /*One click selects entire email*/
+}
+
+.envelope:hover .email-text {
+  visibility: visible;
+  /* transition: all ease-in-out 250ms; */
 }
 
 .vertical {
@@ -59,6 +92,16 @@ body {
     position:absolute;
     left: 16.5%;
     transform: translateY(60%);
+}
+
+.headline-img{
+  /* background-image: url("assets/images/process/ProcessImgHeader.png"); */
+  max-width: 100%;
+  min-height: 100%;
+  /* background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;} */
 }
 
 /* ----------------------------- Home Page CSS -----------------------------  */
@@ -147,33 +190,12 @@ body {
 
 }
 
-.envelope .email-text{
-  visibility: hidden;
-  width: 120px;
-  background-color: black;
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px 0;
-  font-family: "proxima nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
-
-  /* Position the emailText */
-  position: absolute;
-  z-index: 1;
-  bottom: 3px;
-  right: 20%;
-  font-size: 16px;
-  cursor: text; /*Changes the pointer to recular cursor for copying*/
-  -webkit-user-select: all; /*One click selects entire email*/
-}
-
-.envelope:hover .email-text {
-  visibility: visible;
-}
-
 div img.animated-gif{
   width: 100%;
   height: 680px;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 .anim-text-block{
@@ -382,16 +404,6 @@ iframe {
 }
 
 /* ----------------------------- Process Page CSS ----------------------------- */
-.process-headline-img{
-  /* background-image: url("assets/images/process/ProcessImgHeader.png"); */
-  max-width: 100%;
-  min-height: 100%;
-  /* background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;} */
-}
-
 .process-img{
   float: left;
   /* border-radius: 8px; */
@@ -416,11 +428,22 @@ iframe {
 /* ----------------------------- Projects Page CSS ----------------------------- */
 
 /* images */
+.img-section{
+  padding: 450px 200px;
+  padding-bottom: 25px;
+}
+
+.proj-subtitles {
+  padding-left: 65px;
+  font-weight: bold;
+}
+
 .media-list {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   flex-wrap: wrap;
+  padding: 0px 2%;
 }
 
 .media-card-wrapper {
