Projects page mods
Slight changes

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -218,25 +218,6 @@ div .anim-text {
   display:inline-block;
 }
 
-.vids {
-  display: table;
-  width: 100%;
-  height: auto;
-  padding: 5%;
-}
-
-.vids ul {
-  display: table-row;
-}
-
-.vids li {
-  display: table-cell
-}
-
-iframe {
-  display: block;
-}
-
 .footer {
   overflow: hidden;
   background: #D8D8D8;
@@ -429,13 +410,16 @@ iframe {
 
 /* images */
 .img-section{
-  padding: 450px 200px;
+  padding: 450px 100px;
   padding-bottom: 25px;
 }
 
 .proj-subtitles {
-  padding-left: 65px;
+  padding-left: 10%;
+  padding-top: 5%;
+  padding-bottom: 2%;
   font-weight: bold;
+  letter-spacing: 3px;
 }
 
 .media-list {
@@ -443,20 +427,20 @@ iframe {
   flex-direction: row;
   justify-content: space-around;
   flex-wrap: wrap;
-  padding: 0px 2%;
+  padding: 0px 8%;
 }
 
 .media-card-wrapper {
-  width: 250px;
-  height: 250px;
+  width: 280px;
+  height: 280px;
   position: relative;
   margin-bottom: 25px;
   text-align: center;
 }
 
 .media-card{
-  width: 225px;
-  height: 225px;
+  width: 255px;
+  height: 255px;
   display: block;
   position: absolute;
   left: 0;
@@ -475,10 +459,10 @@ iframe {
 }
 
 .media-card:hover {
-  width: 250px;
-  height: 250px;
+  width: 280px;
+  height: 280px;
   z-index: 10;
-  box-shadow: 0 50px 125px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 20px 25px rgba(0, 0, 0, 0.4);
 }
 
 /* videos */
