--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -139,7 +139,7 @@ body {
   #name {
     font-size: 14px;
     padding: 0px;
-    transform: translate(-50%, 200%);
+    transform: translate(-50%, 250%);
   }
 
   #linkedIn, #email {
@@ -149,13 +149,13 @@ body {
   .topnav__logo {
     width: 30%;
     height: auto;
-    transform: translate(25%, 45%);
+    transform: translate(25%, 65%);
   }
 
   .vertical{
     /* border: 0.5px solid white; */
     height: 25px;
-    transform: translate(2100%, 105%);
+    transform: translate(2100%, 145%);
     /* display: none; */
   }
 
@@ -175,8 +175,12 @@ body {
     text-align: left;
   }
 
-  .palette {
+  .palette, .process__topics {
     display: none;
+  }
+
+  .avatar-image {
+    width: 100%;
   }
 
   /* .avatar-image .pie-img .desktop-img .level-img{
@@ -390,7 +394,7 @@ div .anim-text {
 /* ----------------------------- Process Page CSS ----------------------------- */
 .process-img{
   float: left;
-  padding: 0%;
+  padding: 2% 0%;
   /* border-radius: 8px; */
   /* box-shadow: 0 45px 100px rgba(0, 0, 0, 0.4); */
   /* transition: all .3s ease-in-out; */
@@ -464,7 +468,17 @@ div .anim-text {
 
 .media-card > img {
   width: 100%;
-  height: 100%;
+  height: 80%;
+}
+
+.img-cards {
+  text-decoration:none;
+}
+
+/* Card captions */
+.img-cards > div {
+  color: black;
+  padding-top: 5px;
 }
 
 .media-card:hover {
