--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -263,7 +263,8 @@ div .anim-text {
 /* ----------------------------- About Page CSS ----------------------------- */
 .container{
   /* padding: 1em 2em; */
-  padding: 1% 10% 10% 10%;
+  /* padding: 1% 10% 10% 10%; */
+  padding: 1% 10%;
   /* box-shadow: 0px 4px 3px -2px rgba(0,0,0,.75); */
 }
 
@@ -292,13 +293,17 @@ div .anim-text {
 }
 
 .pie-img {
-  max-width: 450px;
+  max-width: 100%;
+  width: 100%;
+  /* text-align: center; */
+  transform: translateX(-45px);
   float: none;
   display: block;
 }
 
 .desktop-img{
-  max-width: 50%;
+  max-width: 100%;
+  width: 50%;
   /* float: none; */
   /* display: block; */
   padding-left: 6em;
@@ -307,7 +312,8 @@ div .anim-text {
 
 .level-img{
   max-width: 100%;
-  /* width: 100%; */
+  width: 90%;
+  /* width: 1200px; */
 }
 
 
@@ -349,7 +355,7 @@ div .anim-text {
 }
 
 .list--designer {
-  /* padding-left: 130px; */
+  padding-left: 200px;
 }
 
 .list--coder{
@@ -418,19 +424,27 @@ div .anim-text {
 
 /* images */
 .img-section{
-  padding: 450px 100px;
+  /* padding-left: 100px;
   padding-bottom: 25px;
+  padding-right: 100px; */
+  padding: 25px 100px;
   /* box-shadow: 0px 4px 2px -2px rgba(0,0,0,.75); */
 }
 
+.vid-section {
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
 .proj-subtitles {
-  padding-top: 2%;
-  padding-bottom: 2%;
-  /* font-weight: normal; */
-  /* background-color: #D8D8D8;
+  /* padding-top: 60%; */
+  /* padding-bottom: 2%; */
+  /* text-align: center; */
+  font-weight: normal;
+  background-color: black;
   padding: 20px;
-  color: black; */
-  /* letter-spacing: 2px; */
+  color: #F25D50;
+  letter-spacing: 5px;
 }
 
 .media-list {
@@ -479,6 +493,7 @@ div .anim-text {
 .img-cards > div {
   color: black;
   padding-top: 5px;
+  font-size: 18px;
 }
 
 .media-card:hover {
