--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -33,9 +33,9 @@ body {
   height: 100px;
 }
 
-/* .active {
-  color: #F25D50; coral color
-} */
+.active-btn {
+  color: #F25D50 !important; /*coral color*/
+}
 
 .topnav__link {
   float: right;
@@ -105,6 +105,40 @@ body {
   background-attachment: fixed;
   background-position: center;
   background-size: cover;} */
+}
+
+.footer {
+  overflow: hidden;
+  background: #D8D8D8;
+  height: 80px;
+  padding: 0 2%;
+  width: 98%;
+  position: absolute;
+  z-index: 1000;
+  font-family: "proxima nova", "Helvetica Neue", Helvetica, Arial, Sans-serif;
+  font-weight:300;
+  /* box-shadow: 0 50vh 0 50vh #000; */
+}
+
+.footer__link {
+    float:right;
+    display: block;
+    color: #6D7278;
+    text-align: center;
+    padding: 30px 20px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.footer__link:hover {
+  color: #F25D50;
+}
+
+.center-block {
+  text-align: center;
+  display: inline-block;
+  padding-left: 20%;
+  font-weight: normal;
 }
 
 /* ----------------------------- Home Page CSS -----------------------------  */
@@ -183,18 +217,6 @@ body {
     width: 100%;
   }
 
-  /* .avatar-image .pie-img .desktop-img .level-img{
-    width: 100%;
-  } */
-
-  /* .vertical {
-    display: none;
-  } */
-
-  /* .me-img {
-    width: 100%;
-  } */
-
 }
 
 div img.animated-gif{
@@ -224,41 +246,6 @@ div .anim-text {
   margin: 3px;
   display:inline-block;
 }
-
-.footer {
-  overflow: hidden;
-  background: #D8D8D8;
-  height: 80px;
-  padding: 0 2%;
-  width: 98%;
-  position: absolute;
-  z-index: 1000;
-  font-family: "proxima nova", "Helvetica Neue", Helvetica, Arial, Sans-serif;
-  font-weight:300;
-  /* box-shadow: 0 50vh 0 50vh #000; */
-}
-
-.footer__link {
-    float:right;
-    display: block;
-    color: #6D7278;
-    text-align: center;
-    padding: 30px 20px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-.footer__link:hover {
-  color: #F25D50;
-}
-
-.center-block {
-  text-align: center;
-  display: inline-block;
-  padding-left: 20%;
-  font-weight: normal;
-}
-
 
 /* ----------------------------- About Page CSS ----------------------------- */
 .container{
@@ -296,7 +283,7 @@ div .anim-text {
   max-width: 100%;
   width: 100%;
   /* text-align: center; */
-  transform: translateX(-45px);
+  transform: translateX(-75px);
   float: none;
   display: block;
 }
@@ -316,8 +303,6 @@ div .anim-text {
   /* width: 1200px; */
 }
 
-
-
 .palette img {
   width: auto;
   height: 130px;
@@ -332,10 +317,11 @@ div .anim-text {
 
 .list{
   list-style-type: none;
+  padding-top: 60px;
 }
 
 .container__sec{
-    padding: 80px 0px 20px 0px;
+    padding: 50px 0px 20px 0px;
 }
 
 .list__title {
@@ -355,7 +341,7 @@ div .anim-text {
 }
 
 .list--designer {
-  padding-left: 200px;
+  padding-left: 180px;
 }
 
 .list--coder{
