--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -46,6 +46,7 @@ body {
   text-decoration: none;
   font-size: 18px;
   font-weight:300;
+  letter-spacing: 2px;
 }
 
 .topnav__logo {
@@ -57,6 +58,7 @@ body {
 .topnav__name {
   transform: translateX(-30%);
   font-weight: 300;
+  letter-spacing: 2px;
 }
 
 .envelope {
