New pages added
Sketches + Tour Dates pages

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -502,3 +502,10 @@ div .anim-text {
 .media-list > iframe {
   margin-bottom: 50px;
 }
+
+/* ----------------------------- Styles Page CSS ----------------------------- */
+
+.filter {
+  background-color: yellow;
+  padding: 40px;
+}
