Popups page styling
Table changes

--- a/assets/stylesheets/sketches-filter.css
+++ b/assets/stylesheets/sketches-filter.css
@@ -68,7 +68,7 @@
 }
 
 .filter {
-  background-color: #535252;
+  background-color: #535252;                  /* dark grey */
   padding: 20px;
 }
 
