More popups mods
Table changes

--- a/assets/stylesheets/popups.css
+++ b/assets/stylesheets/popups.css
@@ -9,9 +9,11 @@
   transform: translateX(37px);
 }
 
-table{
-  border-collapse:separate;
+table {
+  border-collapse: separate;
   border-spacing: 0 15px;
+  /* background-color: #eaeaea; */
+  /* grid-row-gap: 3px; */
 }
 
 .overview-popups{
@@ -24,7 +26,7 @@ table{
   font-weight: 200;
 }
 
-a{
+a {
   text-decoration: none;
   color: black;
 }
@@ -40,8 +42,8 @@ th {
   font-weight: 300;
 }
 
-th, td{
-width: 300px;
+th, td {
+width: 280px;
 text-align: center;
-padding: 5px;
+padding: 8px;
 }
