--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -412,11 +412,11 @@ div .anim-text {
 /* ----------------------------- Projects Page CSS ----------------------------- */
 
 /* images */
-.img-section{
+.img-section {
   /* padding-left: 100px;
   padding-bottom: 25px;
   padding-right: 100px; */
-  padding: 25px 100px;
+  padding: 45px 100px;
   /* box-shadow: 0px 4px 2px -2px rgba(0,0,0,.75); */
 }
 
@@ -441,9 +441,9 @@ div .anim-text {
   flex-direction: row;
   justify-content: space-around;
   flex-wrap: wrap;
-  padding: 0px 8%;
+  padding: 3% 8%;
+  padding-bottom: 0%;
   box-shadow: 0px 4px 2px -2px rgba(0,0,0,.75);
-  padding-bottom: 2%;
 }
 
 .media-card-wrapper {
