--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -14,14 +14,15 @@ body {
 
 /* ----------------------------- Master Defaults -----------------------------  */
 .link {
-    transition: all ease-in-out 250ms;
+  transition: all ease-in-out 250ms;
 }
 
 .avatar-image{
   /* max-width: 450px; */
   width: 40%;
   float: right;
-  padding-right: 120px;
+  /* padding-right: 120px; */
+  padding-right: 10%;
   padding-left: 10%;
   padding-bottom: 3%;
 }
@@ -93,11 +94,11 @@ body {
 }
 
 .vertical {
-    border-left: 1px solid white;
-    height: 45px;
-    position:absolute;
-    left: 11%;
-    transform: translateY(60%);
+  border-left: 1px solid white;
+  height: 45px;
+  position:absolute;
+  left: 11%;
+  transform: translateY(60%);
 }
 
 .headline-img{
@@ -124,13 +125,13 @@ body {
 }
 
 .footer__link {
-    float:right;
-    display: block;
-    color: #6D7278;
-    text-align: center;
-    padding: 30px 20px;
-    text-decoration: none;
-    font-size: 17px;
+  float:right;
+  display: block;
+  color: #6D7278;
+  text-align: center;
+  padding: 30px 20px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
 .footer__link:hover {
@@ -161,7 +162,11 @@ body {
   /* transition-timing-function: ease-in-out; */
 }
 
+/******************************************* media screen ***********************************************/
 @media screen and (max-width: 600px) {
+  /* body {
+    overflow-x: hidden;
+  } */
   .topnav__link:not(:nth-child(-n+3)){
     display: none;
     line-height: 2px;
@@ -170,13 +175,13 @@ body {
   .topnav__link.hamburger {
     float: right;
     display: block;
-    transform: translateY(-10%);
+    transform: translateY(-7%);
   }
 
   #name {
     font-size: 14px;
     padding: 0px;
-    transform: translate(-50%, 250%);
+    transform: translate(-70%, 250%);
   }
 
   #linkedIn, #email {
@@ -189,10 +194,10 @@ body {
     transform: translate(25%, 65%);
   }
 
-  .vertical{
+  .vertical {
     /* border: 0.5px solid white; */
     height: 25px;
-    transform: translate(2100%, 145%);
+    transform: translate(4500%, 145%);
     /* display: none; */
   }
 
@@ -200,10 +205,10 @@ body {
     position: relative;
   }
 
-  .topnav.responsive.hamburger{
+  .topnav.responsive .hamburger{
     position: absolute;
-    right: 0px;
-    top: 0px;
+    right: 0;
+    top: 0;
   }
 
   .topnav.responsive .topnav__link {
@@ -212,12 +217,53 @@ body {
     text-align: left;
   }
 
-  .palette, .process__topics {
+  .palette .process__topics {
     display: none;
   }
 
   .avatar-image {
     width: 100%;
+  }
+
+  .anim-text-block {
+    padding: 2% !important;
+  }
+
+  .line {
+    width: 50px !important;
+  }
+
+  .anim-text {
+    font-size: 13px !important;
+  }
+
+  /* ------------------- About ------------------- */
+  .avatar-image {
+    padding-right: 0%;
+    padding-bottom: 10%;
+  }
+
+  .palette {
+    display: none;
+  }
+
+  .list--designer {
+    padding-left: 0 !important;
+  }
+
+  /* ------------------- Sketches ------------------- */
+
+  .filter-div {
+    width: 100%;
+  }
+  .btn {
+    width: 100%;
+  }
+  .filter-section {
+    width: 100%;
+    padding-top: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
 }
@@ -251,7 +297,7 @@ div .anim-text {
 }
 
 /* ----------------------------- About Page CSS ----------------------------- */
-.container{
+.container--about{
   /* padding: 1em 2em; */
   /* padding: 1% 10% 10% 10%; */
   padding: 1% 10%;
@@ -324,7 +370,7 @@ div .anim-text {
 }
 
 .container__sec{
-    padding: 50px 0px 20px 0px;
+  padding: 50px 0px 20px 0px;
 }
 
 .list__title {
@@ -344,7 +390,7 @@ div .anim-text {
 }
 
 .list--designer {
-  padding-left: 180px;
+  padding-left: 30%;
 }
 
 .list--coder{
@@ -352,23 +398,23 @@ div .anim-text {
 }
 
 [class*="col-"]
-  { float: left;
-    /* padding: 5% 5%; */
-    box-shadow: 0px 4px 2px -2px rgba(0,0,0,.75);
-  }
-  .col-xs {width: 100%}
-  .col-xs-1 {width: 8.333%}
-  .col-xs-2 {width: 16.667%}
-  .col-xs-3 { width: 25%}
-  .col-xs-4 {width: 33.333%}
-  .col-xs-5 {width: 41.667%}
-  .col-xs-6 {width: 50%}
-  .col-xs-7 {width: 58.333%}
-  .col-xs-8 {width: 66.667%}
-  .col-xs-9 {width: 75%}
-  .col-xs-10 {width: 83.333%}
-  .col-xs-11 {width: 91.667%}
-  .col-xs-12 {width: 100%}
+{ float: left;
+  /* padding: 5% 5%; */
+  box-shadow: 0px 4px 2px -2px rgba(0,0,0,.75);
+}
+.col-xs {width: 100%}
+.col-xs-1 {width: 8.333%}
+.col-xs-2 {width: 16.667%}
+.col-xs-3 { width: 25%}
+.col-xs-4 {width: 33.333%}
+.col-xs-5 {width: 41.667%}
+.col-xs-6 {width: 50%}
+.col-xs-7 {width: 58.333%}
+.col-xs-8 {width: 66.667%}
+.col-xs-9 {width: 75%}
+.col-xs-10 {width: 83.333%}
+.col-xs-11 {width: 91.667%}
+.col-xs-12 {width: 100%}
 
 @media only screen and (min-width: 544px) {
   .col-md {width: 100%}
@@ -501,4 +547,121 @@ div .anim-text {
 }
 .media-list > iframe {
   margin-bottom: 50px;
+}
+
+/* ----------------------------- Sketches-filter ----------------------------- */
+
+.overview{
+  /* padding-right: 225%; */
+  font-size: 20px;
+  /* padding: 35px 350px 0px 45px; */
+  padding: 1% 10% 0% 5.5%;
+}
+
+.container--sketches {
+  overflow: hidden;
+  padding: 0% 0% 0% 4.5%;
+}
+
+.filter-div {
+  float: left;
+  background-color: #2196F3;
+  color: #ffffff;
+  width: 30%;
+  line-height: 100px;
+  text-align: center;
+  margin: 25px 15px;
+  display: none;
+  /* Hidden by default */
+}
+
+/* The "show" class is added to the filtered elements */
+.show {
+  display: block;
+}
+
+/* Style the buttons */
+.btn {
+  border: none;
+  outline: none;
+  padding: 10px 20px;
+  margin-left:20px;                             /*adds space between buttons */
+  border-radius: 5px;                           /*adds roundness */
+  background-color: #f1f1f1;
+  cursor: pointer;
+  transform: translate(50px, 7px);
+  font-size: 14px;
+  font-family: "proxima nova", "Helvetica Neue", Helvetica, Arial, Sans-serif;
+}
+
+/* Add a light grey background on mouse-over */
+.btn:hover {
+  background-color: #ddd;
+}
+
+/* Add a dark background to the active button */
+.btn.active-b {
+  background-color: black;
+  color: #F25D50;;
+}
+
+.merch-img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.filter {
+  background-color: #535252;                  /* dark grey */
+  padding: 20px;
+}
+
+
+
+/* ----------------------------- Popups ----------------------------- */
+
+.contents--popups {
+  font-family: "proxima nova", "Helvetica Neue", Helvetica, Arial, Sans-serif;
+  font-weight: 300;
+  padding: 2% 3%;
+  transform: translateX(37px);
+}
+
+table {
+  border-collapse: separate;
+  border-spacing: 0 15px;
+  /* background-color: #eaeaea; */
+  /* grid-row-gap: 3px; */
+}
+
+.overview-popups{
+  font-size: 20px;
+  padding: 30% 20% 0% 5.5%;
+}
+
+.table-contents {
+  font-size: 30px;
+  font-weight: 200;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  color: #F25D50
+}
+
+th {
+  background-color: #535252;
+  color: white;
+  /* font-size: 25px; */
+  font-weight: 300;
+}
+
+th, td {
+width: 280px;
+text-align: center;
+padding: 8px;
 }
