--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -243,12 +243,49 @@ body {
     padding-bottom: 10%;
   }
 
+  .line {
+    display: none !important;
+  }
+
   .palette {
-    display: none;
+    display:flex;
+    transform: translateX(-65%);
+  }
+
+  .list--coder{
+    padding-top: 1% !important;
+    padding-bottom: 25%;
   }
 
   .list--designer {
-    padding-left: 0 !important;
+    padding-left: 14% !important;
+  }
+
+  .pie-img {
+    transform: translateX(-9%) !important;
+  }
+
+  .desktop-img{
+    width: 100% !important;
+    padding: 0% !important;
+  }
+
+  .level-img{
+    display: none;
+  }
+
+  .level-img-2 {
+    display: block !important;
+    padding: 0%;
+  }
+
+  .container--about .col-xs-12{
+    box-shadow: none;
+  }
+
+  div.container__sec.col-xs-12.list--process {
+    padding: 0;
+    padding-bottom: 10%;
   }
 
   /* ------------------- Sketches ------------------- */
