--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -225,11 +225,15 @@ body {
     width: 100%;
   }
 
-  .anim-text-block {
+  .anim-text-block--home {
     padding: 2% !important;
   }
 
-  .line {
+  .anim-text-block--projects {
+    transform: translateX(4%) !important;
+  }
+
+  .line--home, .line--projects {
     width: 50px !important;
   }
 
@@ -303,7 +307,17 @@ body {
     padding-right: 0px;
   }
 
+  /* ------------------- Projects ------------------- */
+  .media-list {
+    padding-top: 15% !important;
+  }
+
+  .img-section {
+    padding: 0 !important;
+  }
 }
+
+/*******************************************************************************************************/
 
 div img.animated-gif{
   width: 100%;
@@ -313,7 +327,7 @@ div img.animated-gif{
   background-size: cover;
 }
 
-.anim-text-block{
+.anim-text-block--home, .anim-text-block--projects{
   padding: 30px 0;
 }
 
@@ -325,7 +339,7 @@ div .anim-text {
   letter-spacing: 2px;
 }
 
-.line {
+.line, .line--home, .line--projects{
   width: 230px;
   height: 0;
   border: 0.5px solid #C4C4C4;
