--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -772,15 +772,36 @@ padding: 8px;
   padding: 5%;
 }
 
+.contents--popups--mobile li {
+  margin: 3% 0;
+}
+
+.mobile--header {
+  font-weight: bold;
+}
+
+.mobile--content {
+  font-weight: 300;
+}
+
+.mobile--content a {
+  color: #F25D50;
+  text-decoration: underline;
+}
+
 .drk-grey-ul {
   background-color: #535252;
   color: white;
   width: 83%;
   transform: translateX(10%);
+  border-radius: 5%;
+  box-shadow: 0px 4px 20px -2px rgba(0,0,0,.75);
 }
 
 .lgt-grey-ul {
   background-color: #D8D8D8;
   width: 83%;
   transform: translateX(10%);
+  border-radius: 5%;
+  box-shadow: 0px 4px 20px -2px rgba(0,0,0,.75);
 }
