--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -21,10 +21,7 @@ body {
   /* max-width: 450px; */
   width: 40%;
   float: right;
-  /* padding-right: 120px; */
-  padding-right: 10%;
-  padding-left: 10%;
-  padding-bottom: 3%;
+  padding: 15%, 10%;
 }
 
 .topnav {
@@ -399,7 +396,7 @@ div .anim-text {
 .container--about{
   /* padding: 1em 2em; */
   /* padding: 1% 10% 10% 10%; */
-  padding: 1% 10%;
+  padding: 0% 10%;
   /* box-shadow: 0px 4px 3px -2px rgba(0,0,0,.75); */
 }
 
@@ -438,11 +435,9 @@ div .anim-text {
 
 .desktop-img{
   max-width: 100%;
-  width: 50%;
-  /* float: none; */
-  /* display: block; */
-  padding-left: 6em;
-  padding-right: 0px;
+  width: 60%;
+  padding-right: 0;
+  /* padding-left: 3%; */
 }
 
 .level-img{
@@ -469,7 +464,7 @@ div .anim-text {
 }
 
 .container__sec{
-  padding: 5%;
+  padding-right: 10%;
 }
 
 .list__title {
@@ -546,7 +541,8 @@ div .anim-text {
   flex-direction: row;
   /* justify-content: flex-start; */
   flex-wrap: wrap;
-  padding: 5%;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
 .list__process{
