--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -28,7 +28,6 @@ body {
   overflow: hidden;
   background-color: black;
   padding: 0 4%;
-  height: 100px;
 }
 
 .active-btn {
@@ -164,21 +163,23 @@ body {
   /* body {
     overflow-x: hidden;
   } */
-  .topnav__link:not(:nth-child(-n+3)){
+  .topnav .topnav__link:not(:nth-child(-n+3)){
     display: none;
     line-height: 2px;
   }
 
-  .topnav__link.hamburger {
+  .topnav .topnav__link.hamburger {
     float: right;
     display: block;
     transform: translateY(-7%);
+    color: white;
   }
 
   #name {
     font-size: 14px;
     padding: 0px;
     transform: translate(-70%, 250%);
+    /* color: white; */
   }
 
   #linkedIn, #email {
@@ -195,11 +196,37 @@ body {
     /* border: 0.5px solid white; */
     height: 25px;
     transform: translate(4500%, 145%);
+    position: absolute;
     /* display: none; */
   }
 
+  /* CHANGES FROM HERE to here */
+  #topnav--overlay {
+    /* width: 100px;
+    height: 100px; */
+    position: relative;
+  }
+  #animated-gif,
+  #myTopNav {
+    /* width: 100%;
+    height: 100%; */
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  #myTopNav {
+    z-index: 10;
+  }
+  /* TO HEREEEEEE */
+
   .topnav.responsive {
     position: relative;
+    /* background-color: blue; */
+    width: 95%;
+  }
+
+  .animated-gif {
+    transform: translateY(13%);
   }
 
   .topnav.responsive .hamburger{
@@ -212,6 +239,7 @@ body {
     float: none;
     display: block;
     text-align: left;
+    color: red;
   }
 
   .palette .process__topics {
@@ -370,6 +398,7 @@ div img.animated-gif{
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
+  /* transform: translateY(13%); */
 }
 
 .anim-text-block--home, .anim-text-block--projects{
