--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -206,7 +206,7 @@ body {
     height: 100px; */
     position: relative;
   }
-  #animated-gif,
+  #animated-gif, #about-img,
   #myTopNav {
     /* width: 100%;
     height: 100%; */
@@ -246,7 +246,7 @@ body {
     padding-bottom: 0%;
   }
 
-  /* .topnav.responsive a:hover {
+  /* .topnav.responsive .topnav__link:hover {
     color: #F25D50;
   } */
 
