--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -28,6 +28,7 @@ body {
   overflow: hidden;
   background-color: black;
   padding: 0 4%;
+  height: 100px;
 }
 
 .active-btn {
@@ -163,23 +164,21 @@ body {
   /* body {
     overflow-x: hidden;
   } */
-  .topnav .topnav__link:not(:nth-child(-n+3)){
+  .topnav__link:not(:nth-child(-n+3)){
     display: none;
     line-height: 2px;
   }
 
-  .topnav .topnav__link.hamburger {
+  .topnav__link.hamburger {
     float: right;
     display: block;
     transform: translateY(-7%);
-    color: white;
   }
 
   #name {
     font-size: 14px;
     padding: 0px;
     transform: translate(-70%, 250%);
-    /* color: white; */
   }
 
   #linkedIn, #email {
@@ -196,62 +195,23 @@ body {
     /* border: 0.5px solid white; */
     height: 25px;
     transform: translate(4500%, 145%);
-    position: absolute;
     /* display: none; */
   }
 
-  /* CHANGES FROM HERE to here */
-  #topnav--overlay {
-    /* width: 100px;
-    height: 100px; */
-    position: relative;
-  }
-  #animated-gif, #about-img,
-  #myTopNav {
-    /* width: 100%;
-    height: 100%; */
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-  #myTopNav {
-    z-index: 10;
-  }
-  /* TO HEREEEEEE */
-
   .topnav.responsive {
     position: relative;
-    /* background-color: blue; */
-    width: 95%;
-    height: 45%;
-  }
-
-  .animated-gif {
-    transform: translateY(13%);
   }
 
   .topnav.responsive .hamburger{
     position: absolute;
     right: 0;
     top: 0;
-    transform: translate(-41%, 25%) !important;
   }
 
   .topnav.responsive .topnav__link {
     float: none;
     display: block;
     text-align: left;
-    /* color: red; */
-    transform: translateY(160%);
-    padding-bottom: 0%;
-  }
-
-  /* .topnav.responsive .topnav__link:hover {
-    color: #F25D50;
-  } */
-
-  #popups-label {
-    transform: translate(-45%, 153%)
   }
 
   .palette .process__topics {
@@ -410,7 +370,6 @@ div img.animated-gif{
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
-  /* transform: translateY(13%); */
 }
 
 .anim-text-block--home, .anim-text-block--projects{
