About  slight mods - mobile
Pie-img readjustment

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -271,7 +271,9 @@ body {
   }
 
   .pie-img {
-    transform: translateX(-9%) !important;
+    transform: translateX(-1%) !important;
+    padding-top: 0%;
+    padding-bottom: 0%;
   }
 
   .desktop-img{
