--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -374,13 +374,42 @@ body {
 
 /*******************************************************************************************************/
 
-div img.animated-gif{
-  width: 100%;
-  height: 680px;
+div img.video-container{
+  /* width: 100%;
+  height: 680px; */
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
 }
+
+/* .video-container {
+  position: fixed;
+  right: 0;
+  top: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.video-overlay {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-background-size: cover; */
+  /* -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+} */
+
+/* .video-overlay:before{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1;
+  background: #000000;
+  opacity: .75;
+}  */
 
 .anim-text-block--home, .anim-text-block--projects{
   padding: 30px 0;
